...
        app:layout_constraintTop_toBottomOf="@+id/registration_image"
        app:startIconDrawable="@drawable/ic_person_24dp"
        app:startIconTint="@color/light">

        <!--        android:drawableStart="@drawable/ic_user"-->
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/registration_username_text"
            style="@style/TextAppearance.CompileOrCry.Body1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/source_sans_pro_semibold"
            android:inputType="text"
            android:textColor="@color/light" />
...
        app:layout_constraintTop_toBottomOf="@+id/registration_username_layout"
        app:startIconDrawable="@drawable/ic_text_field_24dp"
        app:startIconTint="@color/light">

        <!--        android:drawableStart="@drawable/ic_user"-->
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/registration_name_text"
            style="@style/TextAppearance.CompileOrCry.Body1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/source_sans_pro_semibold"
            android:inputType="text"
            android:textColor="@color/light" />
...
            android:layout_marginEnd="16dp"
            android:text="@string/registration_back"
            android:textColor="@color/light"
            app:strokeColor="@color/light" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/done_button"
            style="@style/Widget.Material3.Button"
            android:layout_width="125dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:backgroundTint="@color/light"
            android:text="@string/registration_done"
...
