...
        app:layout_constraintTop_toBottomOf="@id/logo_image"
        app:startIconDrawable="@drawable/ic_person_24dp"
        app:startIconTint="@color/light">

        <!--        android:drawableStart="@drawable/ic_user"-->
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/login_username_text"
            style="@style/TextAppearance.CompileOrCry.Body1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/source_sans_pro_semibold"
            android:inputType="text"
            android:textColor="@color/light" />
...
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_username_layout">

        <!-- Log In Button -->
        <com.google.android.material.button.MaterialButton
            android:id="@+id/login_button"
            style="@style/Widget.Material3.Button.OutlinedButton"
            android:layout_width="125dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:text="@string/log_in"
            android:textColor="@color/light"
            app:strokeColor="@color/light" />

        <!-- Sign Up Button -->
        <com.google.android.material.button.MaterialButton
            android:id="@+id/register_button"
            style="@style/Widget.Material3.Button"
            android:layout_width="125dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:backgroundTint="@color/light"
            android:text="@string/sign_up"
...
