...
    <string name="edit">Edit</string>
    <string name="friends">Friends</string>
    <string name="history">History</string>
    <string name="requests">Requests</string>
    <string name="logout">Logout</string>
    <string name="button_follow">Follow</string>
    <string name="button_requested">Requested</string>
    <string name="button_unfollow">Unfollow</string>
    <string name="sort_prompt">Sort</string>
    <string name="filter_prompt">Filter</string>
    <string name="add_friends">Add Friends</string>
    <string name="view_map">View Map</string>
    <string name="exit_map">Exit Map</string>
    <string name="edit_mood">Edit Mood Event</string>
...
